--- a/sidebar.html
+++ b/sidebar.html
@@ -4,5 +4,19 @@
         <p>UWLEI</p>
     </div>
 
-    <div class=""></div>
+    <div class="flex flex-col gap-[4px]">
+        <div class="menuLink">
+            <a href="dashboard.html">Dashboard</a>
+        </div>
+        <div class="menuLink">
+            <a href="members.html">Members</a>
+        </div>
+        <div class="menuLink">
+            <a href="members.html">Donation</a>
+        </div>
+        <div class="menuLink">
+            <a href="profile.html">Profile</a>
+        </div>
+
+    </div>
 </div>
