--- a/sidebar.html
+++ b/sidebar.html
@@ -4,19 +4,19 @@
         <p>UWLEI</p>
     </div>
 
-    <div class="flex flex-col gap-[4px]">
-        <div class="menuLink">
-            <a href="dashboard.html">Dashboard</a>
-        </div>
-        <div class="menuLink">
-            <a href="members.html">Members</a>
-        </div>
-        <div class="menuLink">
-            <a href="members.html">Donation</a>
-        </div>
-        <div class="menuLink">
-            <a href="profile.html">Profile</a>
-        </div>
+    <div class="flex flex-col gap-[4px] menuLinks">
+        <a href="dashboard.html" class="menuLink">
+            <span>Dashboard</span>
+        </a>
+        <a href="members.html" class="menuLink">
+            <span>Members</span>
+        </a>
+        <a href="members.html" class="menuLink">
+            <span>Donation</span>
+        </a>
+        <a href="profile.html" class="menuLink">
+            <span>Profile</span>
+        </a>
 
     </div>
 </div>
