--- a/sidebar.html
+++ b/sidebar.html
@@ -1,10 +1,10 @@
-<div class="sidebar w-[15%] h-screen border-r-[1px] border-r-gray-300 fixed left-0 top-0 flex flex-col ">
+<div id="sidebar" class="sidebar mobileClass w-[15%] max-small-pc:w-[20%] h-screen border-r-[1px] border-r-gray-300 fixed left-0 top-0 flex flex-col max-tablet:w-[50%] max-tablet:h-screen max-tablet:bg-white">
     <div class="logo">
         <img src="./Assets//Images/logo.jpg" />
         <p>UWLEI</p>
     </div>
 
-    <div class="flex flex-col gap-[4px] menuLinks">
+    <div class="flex flex-col gap-[4px] menuLinks max-tablet:text-[19px]">
         <a href="dashboard.html" class="menuLink">
             <span>Dashboard</span>
         </a>
