--- a/login.html
+++ b/login.html
@@ -10,6 +10,16 @@
   <link rel="stylesheet" href="./Styles/auth.css" />
   <!-- ✅ load api.js as module -->
   <script type="module" src="./Script/api.js"></script>
+  <style type="text/tailwindcss">
+      @theme {
+          /** RESPONSIVNESS **/
+      --breakpoint-small-phone: 400px;
+      --breakpoint-phone: 640px;
+      --breakpoint-tablet: 768px;
+      --breakpoint-small-pc: 1200px;
+      --breakpoint-pc: 1400px;
+      }
+  </style>
 </head>
 <body>
   <div class="flex flex-col authPage">
