--- a/dashboard.html
+++ b/dashboard.html
@@ -24,7 +24,7 @@
     
     <div class="flex items-start w-full relative h-screen">
         <!--SIDEBAR-->
-        <div id="sidebar-container" class="sidebar-container flex-[15%] max-small-pc:flex-[20%] max-tablet:hidden "></div>
+        <div id="sidebar-container" class="sidebar-container flex-[15%] max-small-pc:flex-[20%] max-tablet:flex-[0]"></div>
 
         <!--CONTAINER-->
         <div class="flex-[85%] max-small-pc:flex-[80%] w-full min-h-screen bg-gray-50">
