--- a/sidebar.html
+++ b/sidebar.html
@@ -1,4 +1,4 @@
-<div id="sidebar" class="w-[15%] max-small-pc:w-[20%] h-screen border-r-[1px] border-r-gray-300 fixed left-0 top-0 flex flex-col max-tablet:w-[50%] max-tablet:h-screen max-tablet:bg-white mobileClass">
+<div id="sidebar" class="sidebar w-[15%] max-small-pc:w-[20%] h-screen border-r-[1px] border-r-gray-300 fixed left-0 top-0 flex flex-col max-tablet:w-[50%] max-tablet:h-screen max-tablet:bg-white mobileClass">
     <div class="logo">
         <img src="./Assets//Images/logo.jpg" />
         <p>UWLEI</p>
@@ -11,7 +11,7 @@
         <a href="members.html" class="menuLink">
             <span>Members</span>
         </a>
-        <a href="members.html" class="menuLink">
+        <a href="donation.html" class="menuLink">
             <span>Donation</span>
         </a>
         <a href="profile.html" class="menuLink">
