switched to react

--- a/index.html
+++ b/index.html
@@ -1,76 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <!--
-        <script>
-            fetch('../Utils/head.html')
-            .then(res => res.text())
-            .then(html => document.head.innerHTML = html);
-        </script>
-        -->
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-        <title>UWLEI | UNIQUE WOMEN FOR LEADERSHIP EMPOWERMENT INTERNATIONAL</title>
-        <link rel="stylesheet" href="../Styles/index.css">
-        <link rel="stylesheet" href="./Styles/landing.css">
-        <style type="text/tailwindcss">
-            @theme {
-                /** RESPONSIVNESS **/
-            --breakpoint-small-phone: 400px;
-            --breakpoint-phone: 640px;
-            --breakpoint-tablet: 768px;
-            --breakpoint-small-pc: 1200px;
-            --breakpoint-pc: 1400px;
-            }
-        </style>
-    </head>
-<body>
-    
-    <div class="">
-        <!--top nav-->
-        <div class="w-full bg-amber-400 py-[16px] padx flex items-center justify-between">
-            <h3 class="text-[24px] font-bold max-phone:text-[18px]">UWLEI</h3>
-            
-            <p class="text-[13px] font-semibold text-end max-phone:text-[10px]">UNIQUE WOMEN FOR LEADERSHIP EMPOWERMENT INTERNATIONAL</p>
-        </div>
-
-        <!--NAVBAR-->
-        <div class="w-full bg-white py-[32px] flex items-center justify-between padx navbar">
-            <div class="">
-                <img alt="logo" src="./Assets//Images/logo.jpg" class="w-[70px] max-phone:w-[50px]" />
-            </div>
-
-            <div class="">
-                <a href="index.html" class="text-amber-500 text-[21px] font-semibold">Home</a>
-            </div>
-        </div>
-
-        <!--Showcase-->
-        <div class="w-full h-screen relative flex flex-col padx items-start justify-center">
-            <!--overlay-->
-            <div class="absolute top-0 left-0 w-full h-full bg-black/80 z-[10]"></div>
-            <img src="./Assets/Images/logoImg.jpg" alt="hero image" class="absolute z-[5] right-0 left-0 w-full h-full object-center object-cover" />
-            <div class="flex flex-col z-[20] gap-[24px]">
-                <p class="text-[20px] max-lg:text-[17px] font-bold text-amber-500 max-phone:text-[14px]">Welcome to UWLEI</p>
-                <h1 class="text-white text-[56px] font-bold w-[70%] shadow max-phone:text-[36px]">UNIQUE WOMEN FOR LEADERSHIP EMPOWERMENT INTERNATIONAL</h1>
-
-                <div class="flex items-center gap-[16px]">
-                    <a href="register.html" class="btn text-white bg-amber-500 hover:bg-white hover:text-amber-500 transition-all duration-500 cursor-pointer">Creat Account</a>
-                    <a href="login.html" class="btn border-[2px] border-amber-500 text-amber-500 hover:bg-white transition-all duration-500">Login</a>
-                </div>
-            </div>
-        </div>
-
-        <!--FOOTER-->
-        <div class="padx footer ">
-            <div class="">
-                <img alt="" src="./Assets//Images/logo.jpg" />
-            </div>
-
-            <div class=""></div>
-        </div>
-    </div>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/src/Assets/Images/logo.jpg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./src/index.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    <title>UNIQUE WOMEN FOR LEADERSHIP EMPOWERMENT INTERNATIONAL</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
